Incrementa leia-me.

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,7 @@
 {
   "accentColor": "#ff0000",
   "theme": "obsidian",
-  "textFontFamily": "Amiri"
+  "textFontFamily": "Sitka Heading,Liberation Serif",
+  "baseFontSize": 16,
+  "nativeMenus": false
 }
